# oak_capture_with_depth_mask

./: README.md  oak_capture_with_depth_mask.py  pyproject.toml
